--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.8.4"
   },
